--- a/src/stories/page.css
+++ b/src/stories/page.css
@@ -1,3 +1,7 @@
+.css-rc1jbh{
+  background: linear-gradient(180deg, #669DF6 0%, #669DF6 65.89%, #4ECDE6 115%);
+  padding: 5px;
+}
 .storybook-page {
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
